# bricks

./: .gitignore  LICENSE  MANIFEST.in  README.md  manager.py  pyproject.toml  requirements.txt  setup.py  test_media_downloader.py
.github/workflows/: publish-to-pypi.yml  python-publish.yml
bricks/: CONST.py  VERSION  __init__.py  __main__.py  const.py  plugins.py  state.py
bricks/_api/: _dispatch.py
bricks/_core/: dispatch.py  events.py
bricks/_libs/: __init__.py  request.py  response.py
bricks/client/: __init__.py  cli.py  client.py  manage.py  rpc.py  runner.py  server.py
bricks/core/: __init__.py  context.py  dispatch.py  events.py  genesis.py  intercept.py  signals.py
bricks/db/: __init__.py  _redis.py  mongo.py  redis_.py  rocksdb.py  sqlite.py  sqllite.py
bricks/downloader/: __init__.py  cffi.py  curl.py  dp.py  genesis.py  go_requests.py  httpx_.py  niquests_.py  playwright_.py  primordial.py  primp_.py  pyhttpx_.py  requests_.py  tls_client_.py
bricks/lib/: context.py  cookies.py  counter.py  extractors.py  headers.py  items.py  nodes.py  proxies.py  queues.py  request.py  response.py  variable.py
bricks/libs/: headers.py  request.py  response.py
demos/: air_spider-grpc-demo.py  air_spider-rpc-demo.py  air_spider-rpc-grpc-demo.py  air_spider-rpc-server-demo.py  air_spider_demo.py  air_spider_listener-demo.py  dispatcher_test.py  form_spider_demo.py  form_spider_demo2.py  grpc_test.py  spider_demo.py  spider_generrator.py  template_spider_demo.py  template_spider_demo2.py
docs/: downloaders.md  events.md  media_downloader.md  parsers.md  proxies.md  queues.md  quickstart.md  rpc.md  signals.md  spiders.md  storage.md
example/: __init__.py
tests/: test_cffi_downloader.py  test_downloader_sessions.py  test_event_specs.py
(+79 files in other folders)
